tests/invalid/semantico_sin_end.flow
// EXPECT: E302
workflow demo {
    var ok : bool
    start -> validar
    validar -> validar if ok
}
